[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fk"
version = "0.1.0"
description = "A simple binary installer and manager"
readme = "README.md"
authors = [{ name = "Zeev Rotshtein", email = "zeevro@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fk = "fk:main"

[tool.ruff]
line-length = 250
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "W191",   # tab-indentation - conflicts with formatter
  "E111",   # indentation-with-invalid-multiple - conflicts with formatter
  "E114",   # indentation-with-invalid-multiple-comment - conflicts with formatter
  "E117",   # over-indented - conflicts with formatter
  "D206",   # indent-with-spaces - conflicts with formatter
  "D300",   # triple-single-quotes - conflicts with formatter
  "Q000",   # bad-quotes-inline-string - conflicts with formatter
  "Q001",   # bad-quotes-multiline-string - conflicts with formatter
  "Q002",   # bad-quotes-docstring - conflicts with formatter
  "Q003",   # avoidable-escaped-quote - conflicts with formatter
  "COM812", # missing-trailing-comma - conflicts with formatter
  "COM819", # prohibited-trailing-comma - conflicts with formatter
  "E501",   # line-too-long - see formatter documentation

  'D',
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
